2008-10-18 [michael]	0.6.2cvs2

	* src/libarchive_archive.c
        Fixing a possible memory leak.

2008-10-17 [michael]	0.6.2cvs1

	* configure.ac
	* po/ca.po
	* po/es.po
	* po/fr.po
	* po/hu.po
	* po/pt_BR.po
	* src/archiver.h
	* src/archiver_gtk.c
	* src/archiver_prefs.c
	* src/archiver_prefs.h
	* src/libarchive_archive.c
	* src/libarchive_archive.h

        Fix a bug which was causing files not to be included in archive.
        The reason was if the user had chosen to use descriptive names
        for files in archive and if a descriptive name was not able to be
        constructed then the file was silently dropped from archive.
        Add a fall-back to simply use the mail number instead which will
        then reinstate the message in archive again.

        Added to new features:
        1) Instruct archiver to only include messages before a certain date.
           Date is compared against the files creation time (mtime)
        2) An option to instruct the archiver to delete messages after
           successfully adding them to archiver (1 run to create archive
           and a second run to delete messages)

2008-10-10 [paul]	0.6.2

	0.6.2 released

2008-10-04 [colin]	0.6.1cvs2

	* src/archiver.c
		Win32: set translation dir

2008-10-04 [colin]	0.6.1cvs1

	* src/archiver_gtk.c
	* src/libarchive_archive.c
		Use g_stat instead of stat

2008-10-03 [paul]	0.6.1

	0.6.1 released

2008-10-03 [paul]	0.6.0cvs3

	* configure.ac
	* po/ca.po
	* po/hu.po
		added by Miquel Oliete, Pader Rezo

2008-07-29 [colin]	0.6.0cvs2

	* src/archiver.c
		Switch the main menu to GtkUIManager

2008-07-20 [colin]	0.6.0cvs1

	* src/archiver_gtk.c
	* src/archiver_prefs.c
		Undeprecate tooltips

2008-06-27 [paul]	0.6.0

	0.6 released (initial release)

2008-06-27 [paul]	0.5.0cvs29

	* configure.ac
	* po/pt_BR.po
		added new translation by Frederico Goncalves Guimaraes
	* po/es.po
		updated by Ricardo Mones

2008-06-23 [wwp]	0.5.0cvs28

	* po/fr.po
		Updated French translation.
