@@ -1,3 +1,9 @@
+2008-10-19 [michael]	0.6.2cvs3
+
+	* src/archiver_gtk.c
+        Added a test to prevent crash if archive file cannot
+        be created.
+
 2008-10-18 [michael]	0.6.2cvs2
 
 	* src/libarchive_archive.c
